Fix alignment of closed trade rows in My Trades box.

--- a/frontend/client/style/style.scss
+++ b/frontend/client/style/style.scss
@@ -728,7 +728,6 @@ table {
           font-weight: 500;
           font-size: 14.5px;
           color: #4A4A4A;
-          padding-top: 10px;
           text-align: right;
           max-width: 92px;
         }
